--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation("com.codeborne:selenide:6.15.0")
     testImplementation("org.slf4j:slf4j-simple:2.0.7")
+    testImplementation("com.github.javafaker:javafaker:1.0.2")
 }
 
 test {
