--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,9 @@
 name: Test
 
-on: [push]
+on: workflow_dispatch
 jobs:
   test:
-    runs-on: ubuntu-latest //где запускаем
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
