--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,11 @@
 name: Test
 
-on: workflow_dispatch
+on:
+    workflow_dispatch:
+    push:
+      branches:
+        - master
+    pull_request:
 jobs:
   test:
     runs-on: ubuntu-latest
