"language": "ru" from config.json

--- a/notifications/config.json
+++ b/notifications/config.json
@@ -5,7 +5,7 @@
     "environment": "RT-01",
     "comment": "any comment here, @kofitserov",
     "reportLink": "",
-    "language": "en",
+    "language": "ru",
     "allureFolder": "allure-report/allureReport",
     "enableChart": true
   },
