--- a/notifications/config.json
+++ b/notifications/config.json
@@ -5,8 +5,8 @@
     "environment": "RT-01",
     "comment": "any comment here, @kofitserov",
     "reportLink": "",
-    "language": "ru",
-    "allureFolder": "allure-report/allureReport",
+    "language": "en",
+    "allureFolder": "build/reports/allure-report/allureReport",
     "enableChart": true
   },
   "telegram": {
