new tag and task

--- a/notifications/config.json
+++ b/notifications/config.json
@@ -3,7 +3,7 @@
     "logo": "",
     "project": "Shoppinglive",
     "environment": "RT-01",
-    "comment": "any comment here, @kofitserov",
+    "comment": "any comment here, @k_ofitserov",
     "reportLink": "",
     "language": "en",
     "allureFolder": "build/reports/allure-report/allureReport",
