--- a/build.gradle
+++ b/build.gradle
@@ -57,3 +57,9 @@ task search_test(type: Test) {
         includeTags("search")
     }
 }
+
+task authorization_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("authorization")
+    }
+}
