--- a/notifications/config.json
+++ b/notifications/config.json
@@ -5,7 +5,7 @@
     "environment": "RT-01",
     "comment": "any comment here, @k_ofitserov",
     "reportLink": "",
-    "language": "en",
+    "language": "en", //todo разобраться с русским языком
     "allureFolder": "build/reports/allure-report/allureReport",
     "enableChart": true
   },
